# Resume-Tailor

./: .gitignore  README.MD  README.md  original_resume.tex  pyproject.toml
outputs/: Tailored_Resume.tex  analysis.md  packages.tex
src/ai_resume_tailor/: crew.py  main.py
src/ai_resume_tailor/config/: agents.yaml  tasks.yaml
